# LatentSync

./: inference.sh  pyproject.toml
configs/unet/: stage2.yaml
latentsync/pipelines/: lipsync_pipeline_optimized.py  worker.py
latentsync/utils/: affine_transform.py  image_processor.py  util.py
latentsync/whisper/: audio2feature.py
scripts/: inference_optimized.py
