[tool.poetry]
name = "latentsync"
version = "1.6.0"
description = ""
readme = "README.md"
authors = [
    "Joshua Parkin <josh@prescence.ai>",
    "Leif Riksheim <leif@presence.ai>",
]
package-mode = true

[tool.poe.tasks]
install = "poetry install"
uninstall = "poetry uninstall"
find_unused_packages = "deptry ."

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = { version = "2.7.0+cu128", source = "pytorch-cu128" }
torchvision = { version = "0.22.0+cu128", source = "pytorch-cu128" }
diffusers = "0.32.2"
transformers = "4.48.0"
decord = "0.6.0"
accelerate = "0.26.1"
einops = "0.7.0"
omegaconf = "2.3.0"
opencv-python = "4.9.0.80"
mediapipe = "0.10.21"
python_speech_features = "0.6"
librosa = "0.10.1"
scenedetect = "0.6.1"
ffmpeg-python = "0.2.0"
imageio = "2.31.1"
imageio-ffmpeg = "0.5.1"
lpips = "0.1.4"
face-alignment = "1.4.1"
gradio = "5.24.0"
huggingface-hub = "0.30.2"
numpy = "1.26.4"
kornia = "0.8.1"
insightface = "0.7.3"
onnxruntime-gpu = "1.21.0"
DeepCache = "0.1.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
